/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.models";

package net;

import "net/link/LinkEnumsProto.proto";
import "net/ConnectPointProto.proto";
import "net/ProviderIdProto.proto";

// Corresponds to org.onosproject.net.Link.
message LinkProto {
    net.link.LinkStateProto state = 1;
    net.ConnectPointProto src = 2;
    net.ConnectPointProto dst = 3;
    net.link.LinkTypeProto type = 4;
    map<string, string> annotations = 5;
    net.ProviderIdProto provider_id = 6;
    bool isExpected = 7;
}